# ome-arrow

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  python-api.html  search.html  searchindex.js
.github/workflows/: publish-docs.yml  publish-pypi.yml  run-tests.yml
_sources/examples/: learning_to_fly_with_ome-arrow.ipynb.txt
docs/src/: conf.py
docs/src/examples/: learning_to_fly_with_ome-arrow.ipynb  learning_to_fly_with_ome-arrow.py  ome-arrow_quiver.ipynb  ome-arrow_quiver.py
examples/: learning_to_fly_with_ome-arrow.html
src/ome_arrow/: __init__.py  convert.py  core.py  export.py  ingest.py  meta.py  transform.py  utils.py  view.py
tests/: conftest.py  test_convert.py  test_core.py  test_meta.py
tests/data/JUMP-BR00117006/: BR00117006.ome.parquet
tests/data/nviz-artificial-4d-dataset/: E99_C111_ZS023.tif  E99_C111_ZS024.tif  E99_C111_ZS025.tif  E99_C111_ZS026.tif  E99_C111_ZS032.tif  E99_C111_ZS034.tif  E99_C111_ZS035.tif  E99_C111_ZS038.tif  E99_C111_ZS039.tif  E99_C111_ZS040.tif  E99_C111_ZS041.tif  E99_C111_ZS043.tif  E99_C111_ZS046.tif  E99_C222_ZS022.tif  E99_C222_ZS023.tif  E99_C222_ZS024.tif  E99_C222_ZS025.tif  E99_C222_ZS026.tif  E99_C222_ZS027.tif  E99_C222_ZS028.tif  E99_C222_ZS029.tif  E99_C222_ZS032.tif  E99_C222_ZS033.tif  E99_C222_ZS034.tif  E99_C222_ZS035.tif  E99_C222_ZS037.tif  E99_C222_ZS038.tif  E99_C222_ZS039.tif  E99_C222_ZS040.tif  E99_C222_ZS041.tif  E99_C222_ZS043.tif  E99_C222_ZS044.tif  E99_C222_ZS045.tif  E99_C222_ZS046.tif  Z99_111_ZS022.tif  Z99_111_ZS027.tif  Z99_111_ZS028.tif  Z99_111_ZS029.tif  Z99_111_ZS033.tif  Z99_111_ZS037.tif  (+2 more)
